@@ -1,6 +1,7 @@
 package usif
 
 import (
+	"bytes"
 	"encoding/binary"
 	"encoding/hex"
 	"errors"
@@ -39,21 +40,154 @@ var (
 
 	FetchingBalances sys.SyncBool
 	Exit_now         sys.SyncBool
+
+	print_buffer string
 )
 
+func hex_dump(d []byte) (s string) {
+	for {
+		le := 32
+		if len(d) < le {
+			le = len(d)
+		}
+		s += "       " + hex.EncodeToString(d[:le]) + "\n"
+		d = d[le:]
+		if len(d) == 0 {
+			return
+		}
+	}
+}
+
+func dump_raw_sigscript(d []byte) bool {
+	ss, er := btc.ScriptToText(d)
+	if er != nil {
+		println(er.Error())
+		return false
+	}
+
+	p2sh := len(ss) >= 2 && d[0] == 0
+	if p2sh {
+		ms, er := btc.NewMultiSigFromScript(d)
+		if er == nil {
+			print_buffer += fmt.Sprintln("      Multisig script", ms.SigsNeeded, "of", len(ms.PublicKeys))
+			for i := range ms.PublicKeys {
+				print_buffer += fmt.Sprintf("       pkey%d = %s\n", i+1, hex.EncodeToString(ms.PublicKeys[i]))
+			}
+			for i := range ms.Signatures {
+				print_buffer += fmt.Sprintf("       R%d = %64s\n", i+1, hex.EncodeToString(ms.Signatures[i].R.Bytes()))
+				print_buffer += fmt.Sprintf("       S%d = %64s\n", i+1, hex.EncodeToString(ms.Signatures[i].S.Bytes()))
+				print_buffer += fmt.Sprintf("       HashType%d = %02x\n", i+1, ms.Signatures[i].HashType)
+			}
+			return len(ms.Signatures) >= int(ms.SigsNeeded)
+		} else {
+			println(er.Error())
+		}
+	}
+
+	print_buffer += fmt.Sprintln("      SigScript:")
+	for i := range ss {
+		if p2sh && i == len(ss)-1 {
+			// Print p2sh script
+			d, _ = hex.DecodeString(ss[i])
+			s2, er := btc.ScriptToText(d)
+			if er != nil {
+				println(er.Error())
+				p2sh = false
+				print_buffer += fmt.Sprintln("       ", ss[i])
+				continue
+				//return
+			}
+			print_buffer += fmt.Sprintln("        P2SH spend script:")
+			for j := range s2 {
+				print_buffer += fmt.Sprintln("        ", s2[j])
+			}
+		} else {
+			print_buffer += fmt.Sprintln("       ", ss[i])
+		}
+	}
+	return true
+}
+
+func dump_sigscript(d []byte) bool {
+	if len(d) == 0 {
+		print_buffer += fmt.Sprintln("       WARNING: Empty sigScript")
+		return false
+	}
+	rd := bytes.NewReader(d)
+
+	// ECDSA Signature
+	le, _ := rd.ReadByte()
+	if le < 0x40 {
+		return dump_raw_sigscript(d)
+	}
+	sd := make([]byte, le)
+	_, er := rd.Read(sd)
+	if er != nil {
+		return dump_raw_sigscript(d)
+	}
+	sig, er := btc.NewSignature(sd)
+	if er != nil {
+		return dump_raw_sigscript(d)
+	}
+	print_buffer += fmt.Sprintf("       R = %64s\n", hex.EncodeToString(sig.R.Bytes()))
+	print_buffer += fmt.Sprintf("       S = %64s\n", hex.EncodeToString(sig.S.Bytes()))
+	print_buffer += fmt.Sprintf("       HashType = %02x\n", sig.HashType)
+
+	// Key
+	le, er = rd.ReadByte()
+	if er != nil {
+		print_buffer += fmt.Sprintln("       WARNING: PublicKey not present")
+		print_buffer += fmt.Sprint(hex_dump(d))
+		return false
+	}
+
+	sd = make([]byte, le)
+	_, er = rd.Read(sd)
+	if er != nil {
+		print_buffer += fmt.Sprintln("       WARNING: PublicKey too short", er.Error())
+		print_buffer += fmt.Sprint(hex_dump(d))
+		return false
+	}
+
+	print_buffer += fmt.Sprintf("       PublicKeyType = %02x\n", sd[0])
+	key, er := btc.NewPublicKey(sd)
+	if er != nil {
+		print_buffer += fmt.Sprintln("       WARNING: PublicKey broken", er.Error())
+		print_buffer += fmt.Sprint(hex_dump(d))
+		return false
+	}
+	print_buffer += fmt.Sprintf("       X = %64s\n", key.X.String())
+	if le >= 65 {
+		print_buffer += fmt.Sprintf("       Y = %64s\n", key.Y.String())
+	}
+
+	if rd.Len() != 0 {
+		print_buffer += fmt.Sprintln("       WARNING: Extra bytes at the end of sigScript")
+		print_buffer += fmt.Sprint(hex_dump(d[len(d)-rd.Len():]))
+	}
+	return true
+}
+
 func DecodeTxSops(tx *btc.Tx) (s string, missinginp bool, totinp, totout uint64, sigops uint, e error) {
-	s += fmt.Sprintln("Transaction details (for your information):")
-	s += fmt.Sprintln(len(tx.TxIn), "Input(s):")
+	s += fmt.Sprintln("ID:", tx.Hash.String())
+	s += fmt.Sprintln("WTxID:", tx.WTxID().String())
+	s += fmt.Sprintln("Tx Version:", tx.Version)
+	if tx.SegWit != nil {
+		s += fmt.Sprintln("Segregated Witness transaction", len(tx.SegWit))
+	} else {
+		s += fmt.Sprintln("Regular (non-SegWit) transaction", len(tx.SegWit))
+	}
 	sigops = btc.WITNESS_SCALE_FACTOR * tx.GetLegacySigOpCount()
 	tx.Spent_outputs = make([]*btc.TxOut, len(tx.TxIn))
 	ss := make([]string, len(tx.TxIn))
+	s += fmt.Sprintln("TX IN cnt:", len(tx.TxIn))
 	for i := range tx.TxIn {
-		ss[i] += fmt.Sprintf(" %3d %s seq=0x%x", i, tx.TxIn[i].Input.String(), tx.TxIn[i].Sequence)
+		ss[i] += fmt.Sprintf("%4d) %s\n     scr_len=%d    seq=%08x    ", i, tx.TxIn[i].Input.String(), len(tx.TxIn[i].ScriptSig), tx.TxIn[i].Sequence)
 		var po *btc.TxOut
 
 		inpid := btc.NewUint256(tx.TxIn[i].Input.Hash[:])
 		if txinmem, ok := network.TransactionsToSend[inpid.BIdx()]; ok {
-			ss[i] += fmt.Sprint(" mempool")
+			ss[i] += "from mempool"
 			if int(tx.TxIn[i].Input.Vout) >= len(txinmem.TxOut) {
 				ss[i] += fmt.Sprintf(" - Vout TOO BIG (%d/%d)!", int(tx.TxIn[i].Input.Vout), len(txinmem.TxOut))
 			} else {
@@ -62,11 +196,12 @@ func DecodeTxSops(tx *btc.Tx) (s string, missinginp bool, totinp, totout uint64,
 		} else {
 			po = common.BlockChain.Unspent.UnspentGet(&tx.TxIn[i].Input)
 			if po != nil {
-				ss[i] += fmt.Sprintf("%8d", po.BlockHeight)
+				ss[i] += fmt.Sprintf("from block %d", po.BlockHeight)
 			}
 		}
 		tx.Spent_outputs[i] = po
 	}
+	var unsigned uint64
 	for i := range tx.TxIn {
 		s += ss[i]
 		po := tx.Spent_outputs[i]
@@ -74,7 +209,7 @@ func DecodeTxSops(tx *btc.Tx) (s string, missinginp bool, totinp, totout uint64,
 			ok := script.VerifyTxScript(po.Pk_script, &script.SigChecker{Amount: po.Value, Idx: i, Tx: tx}, script.VER_P2SH|script.VER_DERSIG|script.VER_CLTV)
 			if !ok {
 				s += fmt.Sprintln("\nERROR: The transacion does not have a valid signature.")
-				e = errors.New("Invalid signature")
+				e = errors.New("invalid signature")
 			}
 			totinp += po.Value
 
@@ -82,7 +217,40 @@ func DecodeTxSops(tx *btc.Tx) (s string, missinginp bool, totinp, totout uint64,
 			if ad := btc.NewAddrFromPkScript(po.Pk_script, common.Testnet); ad != nil {
 				ads = ad.String()
 			}
-			s += fmt.Sprintf("\n\t%15.8f BTC @ %s", float64(po.Value)/1e8, ads)
+			s += fmt.Sprintf("\n%15s BTC from address %s\n", btc.UintToBtc(po.Value), ads)
+
+			if len(tx.TxIn[i].ScriptSig) > 0 {
+				print_buffer = ""
+				if !dump_sigscript(tx.TxIn[i].ScriptSig) {
+					unsigned++
+				}
+				s += print_buffer
+			} else {
+				if tx.SegWit == nil || len(tx.SegWit[i]) < 2 {
+					if i < len(tx.SegWit) && len(tx.SegWit[i]) == 1 && (len(tx.SegWit[i][0])|1) == 65 {
+						s += fmt.Sprintln("      Schnorr signature:")
+						s += fmt.Sprintln("       ", hex.EncodeToString(tx.SegWit[i][0][:32]))
+						s += fmt.Sprintln("       ", hex.EncodeToString(tx.SegWit[i][0][32:]))
+						if len(tx.SegWit[i][0]) == 65 {
+							s += fmt.Sprintf("        Hash Type 0x%02x\n", tx.SegWit[i][0][64])
+						}
+						goto skip_wintesses
+					} else {
+						unsigned++
+					}
+				}
+			}
+			if tx.SegWit != nil {
+				s += fmt.Sprintln("      Witness data:")
+				for _, ww := range tx.SegWit[i] {
+					if len(ww) == 0 {
+						s += fmt.Sprintln("       ", "OP_0")
+					} else {
+						s += fmt.Sprintln("       ", hex.EncodeToString(ww))
+					}
+				}
+			}
+		skip_wintesses:
 
 			if btc.IsP2SH(po.Pk_script) {
 				so := btc.WITNESS_SCALE_FACTOR * btc.GetP2SHSigOpCount(tx.TxIn[i].ScriptSig)
@@ -102,16 +270,28 @@ func DecodeTxSops(tx *btc.Tx) (s string, missinginp bool, totinp, totout uint64,
 			missinginp = true
 		}
 	}
-	s += fmt.Sprintln(len(tx.TxOut), "Output(s):")
+	s += fmt.Sprintln("TX OUT cnt:", len(tx.TxOut))
 	for i := range tx.TxOut {
 		totout += tx.TxOut[i].Value
 		adr := btc.NewAddrFromPkScript(tx.TxOut[i].Pk_script, common.Testnet)
 		if adr != nil {
-			s += fmt.Sprintf(" %15.8f BTC to adr %s\n", float64(tx.TxOut[i].Value)/1e8, adr.String())
+			s += fmt.Sprintf("%4d) %20s BTC  to adr %s\n", i, btc.UintToBtc(tx.TxOut[i].Value),
+				adr.String())
 		} else {
-			s += fmt.Sprintf(" %15.8f BTC to scr %s\n", float64(tx.TxOut[i].Value)/1e8, hex.EncodeToString(tx.TxOut[i].Pk_script))
+			s += fmt.Sprintf("%4d) %20s BTC  to scr %s\n", i, btc.UintToBtc(tx.TxOut[i].Value),
+				hex.EncodeToString(tx.TxOut[i].Pk_script))
 		}
 	}
+	s += fmt.Sprintln("Lock Time:", tx.Lock_time)
+	s += fmt.Sprintln("Transaction Size:", tx.Size, "   NoWitSize:", tx.NoWitSize,
+		"   Weight:", tx.Weight(), "   VSize:", tx.VSize())
+
+	if unsigned > 0 {
+		s += fmt.Sprintln("WARNING:", unsigned, "out of", len(tx.TxIn), "inputs are not signed or signed only patially")
+	} else {
+		s += fmt.Sprintln("All", len(tx.TxIn), "transaction inputs seem to be signed")
+	}
+
 	if missinginp {
 		s += fmt.Sprintln("WARNING: There are missing inputs and we cannot calc input BTC amount.")
 		s += fmt.Sprintln("If there is somethign wrong with this transaction, you can loose money...")
@@ -210,7 +390,6 @@ func SendInvToRandomPeer(typ uint32, h *btc.Uint256) {
 		cnt++
 	}
 	network.Mutex_net.Unlock()
-	return
 }
 
 func GetNetworkHashRateNum() float64 {
