@@ -24,6 +24,7 @@
 * Client: New config value "AllBalances.SaveBalances" (default true) along with (save+load) support for it
 * Client: The wallet module has been refactored for simplicity
 * Client: Mew memory pool dump file version also stores information about when txs were last seen
+* Client/TextUI: Updated some mempool and tx related commands (in textui/transactions.go)
 
 1.10.3 - 2024-08-13:
 * Tools/balio: Some improvements around blockchair.com and blockcypher.com API
